--- a/Hello.html
+++ b/Hello.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Template Updated</title>
   <!-- <link rel="icon" type="img/png" href="https://www.google.com/s2/favicons?domain=jacinto.design"> -->
   <!--  you can add your icon here
    <link rel="icon" type="img/png" href="https://www.google.com/s2/favicons?domain=SureshIcon">
@@ -17,6 +17,7 @@
 </head>
 <body>
   <h1>Hello</h1>
+  <h2>Updated now</h2>
   <!-- <i class="fa-thin fa-address-book"></i> -->
 </body>
 </html> 
